chore: test interaction with ValidationService and AbstractTrackerDtoValidationHook more