@@ -43,15 +43,18 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.function.BiConsumer;
 
 import lombok.Builder;
 
 import org.hisp.dhis.common.CodeGenerator;
+import org.hisp.dhis.tracker.TrackerImportStrategy;
 import org.hisp.dhis.tracker.ValidationMode;
 import org.hisp.dhis.tracker.bundle.TrackerBundle;
 import org.hisp.dhis.tracker.domain.Enrollment;
 import org.hisp.dhis.tracker.domain.Event;
+import org.hisp.dhis.tracker.domain.TrackedEntity;
 import org.hisp.dhis.tracker.report.TrackerErrorCode;
 import org.hisp.dhis.tracker.report.TrackerValidationReport;
 import org.hisp.dhis.tracker.report.ValidationErrorReporter;
@@ -123,18 +126,22 @@ class DefaultTrackerValidationServiceTest
     @Builder
     private static class ValidationHook extends AbstractTrackerDtoValidationHook
     {
-        boolean removeOnError;
+        private Boolean removeOnError;
 
-        private BiConsumer<ValidationErrorReporter, Event> validateEvent;
+        private Boolean needsToRun;
+
+        private BiConsumer<ValidationErrorReporter, TrackedEntity> validateTrackedEntity;
 
         private BiConsumer<ValidationErrorReporter, Enrollment> validateEnrollment;
 
+        private BiConsumer<ValidationErrorReporter, Event> validateEvent;
+
         @Override
-        public void validateEvent( ValidationErrorReporter reporter, Event event )
+        public void validateTrackedEntity( ValidationErrorReporter reporter, TrackedEntity trackedEntity )
         {
-            if ( this.validateEvent != null )
+            if ( this.validateTrackedEntity != null )
             {
-                this.validateEvent.accept( reporter, event );
+                this.validateTrackedEntity.accept( reporter, trackedEntity );
             }
         }
 
@@ -148,39 +155,57 @@ class DefaultTrackerValidationServiceTest
         }
 
         @Override
+        public void validateEvent( ValidationErrorReporter reporter, Event event )
+        {
+            if ( this.validateEvent != null )
+            {
+                this.validateEvent.accept( reporter, event );
+            }
+        }
+
+        @Override
         public boolean removeOnError()
         {
-            return this.removeOnError;
+            // using boxed Boolean, so we can test the default removeOnError
+            // behavior of the AbstractTrackerDtoValidationHook
+            // by default we delegate to AbstractTrackerDtoValidationHook
+            return Objects.requireNonNullElseGet( this.removeOnError, super::removeOnError );
+        }
+
+        @Override
+        public boolean needsToRun( TrackerImportStrategy strategy )
+        {
+            // using boxed Boolean, so we can test the default needsToRun
+            // behavior of the AbstractTrackerDtoValidationHook
+            // by default we delegate to AbstractTrackerDtoValidationHook
+            return Objects.requireNonNullElseGet( this.needsToRun, () -> super.needsToRun( strategy ) );
         }
     }
 
     @Test
-    void reportAndRemoveInvalidFromBundleWithRemoveOnErrorHook()
+    void removeOnErrorHookPreventsFurtherValidationOfInvalidEntityEvenInFullValidationMode()
     {
 
         // Test shows
-        // 1. all ValidationErrorReports created by the individual hooks
-        // are merged across hooks and DTOs and returned as one report from the
-        // TrackerValidationService
+        // 1. Hooks with removeOnError==true remove invalid entities from the
+        // TrackerBundle to prevent
+        // subsequent hooks from validating it
         // 2. the TrackerBundle is mutated to only contain valid DTOs after
         // validation
-        // Currently the bundle is mutated by
+        //
+        // Currently, the bundle is mutated by
         // 1. AbstractTrackerDtoValidationHook removes invalid DTOs if the hook
         // has removeOnError == true
-        // 2. DefaultTrackerValidationService removes invalid DTOs if the hook
-        // has removeOnError == false
+        // 2. DefaultTrackerValidationService removes invalid DTOs if they were
+        // not previously removed
+        // by AbstractTrackerDtoValidationHook i.e. hooks having removeOnError
+        // == false
 
         Event validEvent = event();
         Event invalidEvent = event();
 
-        Enrollment validEnrollment = enrollment();
-        Enrollment invalidEnrollment = enrollment();
-
-        TrackerBundle bundle = TrackerBundle.builder()
-            .validationMode( ValidationMode.FULL )
-            .skipRuleEngine( true )
+        TrackerBundle bundle = newBundle()
             .events( events( invalidEvent, validEvent ) )
-            .enrollments( enrollments( validEnrollment, invalidEnrollment ) )
             .build();
 
         ValidationHook removeOnError = ValidationHook.builder()
@@ -188,51 +213,85 @@ class DefaultTrackerValidationServiceTest
             .validateEvent( ( reporter, event ) -> reporter.addErrorIf( () -> invalidEvent.equals( event ), event,
                 TrackerErrorCode.E1032 ) )
             .build();
+        // using default AbstractTrackerDtoValidationHook behavior of
+        // removeOnError==false
         ValidationHook doNotRemoveOnError = ValidationHook.builder()
-            .removeOnError( false )
-            .validateEnrollment( ( reporter, enrollment ) -> reporter
-                .addErrorIf( () -> invalidEnrollment.equals( enrollment ), enrollment, TrackerErrorCode.E1069 ) )
+            .validateEvent( ( reporter, event ) -> reporter.addErrorIf( () -> invalidEvent.equals( event ), event,
+                TrackerErrorCode.E9999 ) )
             .build();
-        TrackerValidationService validationService = new DefaultTrackerValidationService(
-            List.of( removeOnError, doNotRemoveOnError ),
+        service = new DefaultTrackerValidationService( List.of( removeOnError, doNotRemoveOnError ),
             Collections.emptyList() );
 
-        TrackerValidationReport report = validationService.validate( bundle );
+        TrackerValidationReport report = service.validate( bundle );
 
         assertTrue( report.hasErrors() );
-        assertEquals( 2, report.getErrors().size() );
+        assertEquals( 1, report.getErrors().size(), "only remove on error hook should add 1 error" );
         hasError( report, TrackerErrorCode.E1032, invalidEvent );
-        hasError( report, TrackerErrorCode.E1069, invalidEnrollment );
 
         assertFalse( bundle.getEvents().contains( invalidEvent ) );
-        assertFalse( bundle.getEnrollments().contains( invalidEnrollment ) );
         assertTrue( bundle.getEvents().contains( validEvent ) );
-        assertTrue( bundle.getEnrollments().contains( validEnrollment ) );
     }
 
     @Test
-    void failFastDoesNotCallHooksAfterFailure()
+    void fullValidationModeAddsAllErrorsToReport()
+    {
+
+        // Test shows
+        // in ValidationMode==FULL all hooks are called even with entities that
+        // are already invalid (i.e. have an error
+        // in the validation report)
+
+        Event validEvent = event();
+        Event invalidEvent = event();
+
+        TrackerBundle bundle = newBundle()
+            .events( events( invalidEvent, validEvent ) )
+            .build();
+
+        ValidationHook hook1 = ValidationHook.builder()
+            .removeOnError( false )
+            .validateEvent( ( reporter, event ) -> reporter.addErrorIf( () -> invalidEvent.equals( event ), event,
+                TrackerErrorCode.E1032 ) )
+            .build();
+        ValidationHook hook2 = ValidationHook.builder()
+            .removeOnError( false )
+            .validateEvent( ( reporter, event ) -> reporter.addErrorIf( () -> invalidEvent.equals( event ), event,
+                TrackerErrorCode.E9999 ) )
+            .build();
+        service = new DefaultTrackerValidationService( List.of( hook1, hook2 ), Collections.emptyList() );
+
+        TrackerValidationReport report = service.validate( bundle );
+
+        assertTrue( report.hasErrors() );
+        assertEquals( 2, report.getErrors().size(), "both hooks should add 1 error each" );
+        hasError( report, TrackerErrorCode.E1032, invalidEvent );
+        hasError( report, TrackerErrorCode.E9999, invalidEvent );
+
+        assertFalse( bundle.getEvents().contains( invalidEvent ) );
+        assertTrue( bundle.getEvents().contains( validEvent ) );
+    }
+
+    @Test
+    void failFastModePreventsFurtherValidationAfterFirstErrorIsAdded()
     {
 
         Event validEvent = event();
         Event invalidEvent = event();
 
-        TrackerBundle bundle = TrackerBundle.builder()
+        TrackerBundle bundle = newBundle()
             .validationMode( ValidationMode.FAIL_FAST )
-            .skipRuleEngine( true )
             .events( events( invalidEvent, validEvent ) )
             .build();
 
         ValidationHook hook1 = ValidationHook.builder()
-            .removeOnError( true )
+            .removeOnError( false )
             .validateEvent( ( reporter, event ) -> reporter.addErrorIf( () -> invalidEvent.equals( event ), event,
                 TrackerErrorCode.E1032 ) )
             .build();
         TrackerValidationHook hook2 = mock( TrackerValidationHook.class );
-        TrackerValidationService validationService = new DefaultTrackerValidationService( List.of( hook1, hook2 ),
-            Collections.emptyList() );
+        service = new DefaultTrackerValidationService( List.of( hook1, hook2 ), Collections.emptyList() );
 
-        TrackerValidationReport report = validationService.validate( bundle );
+        TrackerValidationReport report = service.validate( bundle );
 
         assertTrue( report.hasErrors() );
         hasError( report, TrackerErrorCode.E1032, invalidEvent );
@@ -244,14 +303,77 @@ class DefaultTrackerValidationServiceTest
     }
 
     @Test
-    void reportWarnings()
+    void needsToRunDoesNotPreventHookExecutionOnImportStrategyDeleteByDefault()
+    {
+        Event invalidEvent = event();
+
+        TrackerBundle bundle = newBundle()
+            .importStrategy( TrackerImportStrategy.DELETE )
+            .events( events( invalidEvent ) )
+            .build();
+
+        ValidationHook hook1 = ValidationHook.builder()
+            .validateEvent( ( reporter, event ) -> reporter.addErrorIf( () -> invalidEvent.equals( event ), event,
+                TrackerErrorCode.E1032 ) )
+            .build();
+        service = new DefaultTrackerValidationService( List.of( hook1 ), Collections.emptyList() );
+
+        TrackerValidationReport report = service.validate( bundle );
+
+        assertTrue( report.hasErrors() );
+        hasError( report, TrackerErrorCode.E1032, invalidEvent );
+    }
+
+    @Test
+    void needsToRunPreventsHookExecutionIfReturnsFalse()
+    {
+        Event invalidEvent = event();
+
+        TrackerBundle bundle = newBundle()
+            .events( events( invalidEvent ) )
+            .build();
+
+        ValidationHook hook1 = ValidationHook.builder()
+            .needsToRun( false )
+            .validateEvent( ( reporter, event ) -> reporter.addErrorIf( () -> invalidEvent.equals( event ), event,
+                TrackerErrorCode.E1032 ) )
+            .build();
+        service = new DefaultTrackerValidationService( List.of( hook1 ), Collections.emptyList() );
+
+        TrackerValidationReport report = service.validate( bundle );
+
+        assertFalse( report.hasErrors() );
+    }
+
+    @Test
+    void needsToRunExecutesHookIfReturnsTrue()
+    {
+        Event invalidEvent = event();
+
+        TrackerBundle bundle = newBundle()
+            .events( events( invalidEvent ) )
+            .build();
+
+        ValidationHook hook1 = ValidationHook.builder()
+            .needsToRun( true )
+            .validateEvent( ( reporter, event ) -> reporter.addErrorIf( () -> invalidEvent.equals( event ), event,
+                TrackerErrorCode.E1032 ) )
+            .build();
+        service = new DefaultTrackerValidationService( List.of( hook1 ), Collections.emptyList() );
+
+        TrackerValidationReport report = service.validate( bundle );
+
+        assertTrue( report.hasErrors() );
+        hasError( report, TrackerErrorCode.E1032, invalidEvent );
+    }
+
+    @Test
+    void warningsDoNotInvalidateAndRemoveEntities()
     {
 
         Event validEvent = event();
 
-        TrackerBundle bundle = TrackerBundle.builder()
-            .validationMode( ValidationMode.FULL )
-            .skipRuleEngine( true )
+        TrackerBundle bundle = newBundle()
             .events( events( validEvent ) )
             .build();
 
@@ -263,11 +385,9 @@ class DefaultTrackerValidationServiceTest
                 }
             } )
             .build();
-        TrackerValidationService validationService = new DefaultTrackerValidationService(
-            List.of( hook ),
-            Collections.emptyList() );
+        service = new DefaultTrackerValidationService( List.of( hook ), Collections.emptyList() );
 
-        TrackerValidationReport report = validationService.validate( bundle );
+        TrackerValidationReport report = service.validate( bundle );
 
         assertFalse( report.hasErrors() );
         assertTrue( report.hasWarnings() );
@@ -277,20 +397,78 @@ class DefaultTrackerValidationServiceTest
         assertTrue( bundle.getEvents().contains( validEvent ) );
     }
 
+    @Test
+    void childEntitiesOfInvalidParentsAreStillValidated()
+    {
+
+        // Test shows
+        // the children of a tracked entity will still be validated even if it
+        // as a parent is invalid
+
+        TrackedEntity invalidTrackedEntity = trackedEntity();
+        Enrollment invalidEnrollment = enrollment();
+        invalidTrackedEntity.setEnrollments( enrollments( invalidEnrollment ) );
+        Event invalidEvent = event();
+        invalidEnrollment.setEvents( events( invalidEvent ) );
+
+        TrackerBundle bundle = newBundle()
+            .validationMode( ValidationMode.FULL )
+            .trackedEntities( trackedEntities( invalidTrackedEntity ) )
+            .enrollments( invalidTrackedEntity.getEnrollments() )
+            .events( invalidEnrollment.getEvents() )
+            .build();
+
+        ValidationHook hook = ValidationHook.builder()
+            .validateTrackedEntity(
+                ( reporter, te ) -> reporter.addErrorIf( () -> invalidTrackedEntity.equals( te ), te,
+                    TrackerErrorCode.E1090 ) )
+            .validateEnrollment( ( reporter, enrollment ) -> reporter.addErrorIf(
+                () -> invalidEnrollment.equals( enrollment ), enrollment,
+                TrackerErrorCode.E1069 ) )
+            .validateEvent( ( reporter, event ) -> reporter.addErrorIf( () -> invalidEvent.equals( event ), event,
+                TrackerErrorCode.E1032 ) )
+            .build();
+        service = new DefaultTrackerValidationService( List.of( hook ), Collections.emptyList() );
+
+        TrackerValidationReport report = service.validate( bundle );
+
+        assertTrue( report.hasErrors() );
+        assertEquals( 3, report.getErrors().size() );
+        hasError( report, TrackerErrorCode.E1090, invalidTrackedEntity );
+        hasError( report, TrackerErrorCode.E1069, invalidEnrollment );
+        hasError( report, TrackerErrorCode.E1032, invalidEvent );
+
+        assertTrue( bundle.getTrackedEntities().isEmpty() );
+        assertTrue( bundle.getEnrollments().isEmpty() );
+        assertTrue( bundle.getEvents().isEmpty() );
+    }
+
+    @NotNull
+    private TrackedEntity trackedEntity()
+    {
+        return TrackedEntity.builder().trackedEntity( CodeGenerator.generateUid() ).build();
+    }
+
     @NotNull
     private Enrollment enrollment()
     {
-        Enrollment enrollment = new Enrollment();
-        enrollment.setEnrollment( CodeGenerator.generateUid() );
-        return enrollment;
+        return Enrollment.builder().enrollment( CodeGenerator.generateUid() ).build();
     }
 
     @NotNull
     private Event event()
     {
-        Event event = new Event();
-        event.setEvent( CodeGenerator.generateUid() );
-        return event;
+        return Event.builder().event( CodeGenerator.generateUid() ).build();
+    }
+
+    @NotNull
+    private List<TrackedEntity> trackedEntities( TrackedEntity... trackedEntities )
+    {
+        // Note: the current AbstractTrackerDtoValidationHook relies on the
+        // bundle "DTO" lists to be mutable
+        // it uses iterator.remove() in validateTrackerDtos()
+        // which is why we cannot simply use List.of(), Arrays.asList()
+        return new ArrayList<>( Arrays.asList( trackedEntities ) );
     }
 
     @NotNull
@@ -299,7 +477,7 @@ class DefaultTrackerValidationServiceTest
         // Note: the current AbstractTrackerDtoValidationHook relies on the
         // bundle "DTO" lists to be mutable
         // it uses iterator.remove() in validateTrackerDtos()
-        // which is why we cannot use List.of(), Arrays.asList()
+        // which is why we cannot simply use List.of(), Arrays.asList()
         return new ArrayList<>( Arrays.asList( enrollments ) );
     }
 
@@ -309,8 +487,12 @@ class DefaultTrackerValidationServiceTest
         // Note: the current AbstractTrackerDtoValidationHook relies on the
         // bundle "DTO" lists to be mutable
         // it uses iterator.remove() in validateTrackerDtos()
-        // which is why we cannot use List.of(), Arrays.asList()
+        // which is why we cannot simply use List.of(), Arrays.asList()
         return new ArrayList<>( Arrays.asList( events ) );
     }
 
+    private TrackerBundle.TrackerBundleBuilder newBundle()
+    {
+        return TrackerBundle.builder().skipRuleEngine( true );
+    }
 }
